Issue #2012 - fix z-index for nav

--- a/webcompat/static/css/src/nav.css
+++ b/webcompat/static/css/src/nav.css
@@ -2,7 +2,7 @@
   position: fixed;
   top: 0;
   left: 50%;
-  z-index: 100;
+  z-index: 1000;
   transform: translateX(-50%);
   width: 100vw;
   display: flex;
